--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,14 @@ body {
     @apply bg-gradient-to-r from-gray-900 to-gray-800 text-white
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
